<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/settings"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:foregroundGravity="fill"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/bookslabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="Books you want" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" />

            <CheckBox
                android:id="@+id/esv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:onClick="onCheckboxClicked"
                android:text="@string/esv" />

            <CheckBox
                android:id="@+id/kjv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:onClick="onCheckboxClicked"
                android:text="@string/kjv" />

            <CheckBox
                android:id="@+id/niv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:onClick="onCheckboxClicked"
                android:text="@string/niv" />

            <CheckBox
                android:id="@+id/nlt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:onClick="onCheckboxClicked"
                android:text="@string/nlt" />
            <CheckBox
                android:id="@+id/es"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:onClick="onCheckboxClicked"
                android:text="@string/rvr" />
            <CheckBox
                android:id="@+id/fr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:onClick="onCheckboxClicked"
                android:text="@string/ost" />
        </LinearLayout>
    </FrameLayout>
</LinearLayout>